Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-proxy-deployment
  namespace: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-proxy-deployment
  template:
    metadata:
      labels:
        app: http-proxy-deployment
    spec:
      containers:
        - name: proxy-container
          image: ghcr.io/romankudravcev/reverse-proxy-http:latest
          ports:
            - containerPort: 8734
---
apiVersion: v1
kind: Service
metadata:
  name: http-proxy-service
  namespace: proxy
spec:
  selector:
    app: http-proxy-deployment
  ports:
    - protocol: TCP
      port: 8734
      targetPort: 8734
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-proxy-ingress-route
  namespace: proxy
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`{any:.*}`)
      priority: 1000
      kind: Rule
      services:
        - name: http-proxy-service
          port: 8734
