Ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-proxy-ingress-route
  namespace: clustershift
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{any:.*}`)
      priority: 1000
      kind: Rule
      services:
        - name: http-proxy-service
          port: 8734
